# jsptr

./: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  jsptr.go  jsptr_example_test.go  jsptr_test.go
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  others.md
.github/workflows/: autodoc.yml  benchmark.yml  ci.yml  codeql.yml  dependabot.yml  lint.yml  smoke.yml  stale.yml
tools/: autodoc.pl
