load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/lestrrat-go/jsptr
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=MODULE.bazel%go_deps",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "jsptr",
    srcs = ["jsptr.go"],
    importpath = "github.com/lestrrat-go/jsptr",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_lestrrat_go_blackmagic//:blackmagic",
        "@com_github_valyala_fastjson//:fastjson",
    ],
)

go_test(
    name = "jsptr_test",
    srcs = ["jsptr_test.go"],
    size = "small",
    embed = [":jsptr"],
    deps = ["@com_github_stretchr_testify//require"],
)